[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/Main.gd" type="Script" id=1]
[ext_resource path="res://Mob/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 400, 0, 0, 0, 0, 0, 400, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

[node name="mobtimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="scoretimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="starttimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="startposition" type="Position2D" parent="." index="4"]

position = Vector2( 240, 450 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="mobpath" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
scale = Vector2( 2.55, 1 )
curve = SubResource( 1 )

[node name="modspawnlocation" type="PathFollow2D" parent="mobpath" index="0"]

offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="6" instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="game_over"]

[connection signal="timeout" from="mobtimer" to="." method="_on_mobtimer_timeout"]

[connection signal="timeout" from="scoretimer" to="." method="_on_scoretimer_timeout"]

[connection signal="timeout" from="starttimer" to="." method="_on_starttimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]


